fix hlLabelRef unreadable fg color if on selected/active headline row

--- a/css/default.less
+++ b/css/default.less
@@ -1,27 +1,1 @@
-@fonts-ui-bold: "Segoe WP Semibold", "Segoe UI Semibold", "Segoe UI Web Semibold", "Segoe UI", Ubuntu, "Helvetica Neue", Helvetica, Arial, sans-serif;
-@fonts-ui:  "Segoe UI", Ubuntu, "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-@color-accent: #257aa7;
-@color-accent-light: lighten(@color-accent, 50%);
-@color-link: @color-accent;
-@default-text: #555;
-
-body.ttrss_main,
-body.ttrss_prefs,
-#main {
-  position : absolute;
-  width: 100%;
-  height: 100%;
-  border: 0;
-  padding: 0;
-  margin: 0;
-}
-
-@import "tt-rss.less";
-@import "cdm.less";
-@import "prefs.less";
-@import "dijit.less";
-@import "utility.less";
-@import "zoom.less";
-
-@import "../lib/flat-ttrss/flat.css";
+@import "defines.less";
