--- a/css/tt-rss.less
+++ b/css/tt-rss.less
@@ -528,6 +528,11 @@ body.ttrss_main {
 		padding-left : 4px;
 	}
 
+	.hl.Selected .hlLabelRef,
+	.hl.active .hlLabelRef {
+		color : #063064;
+	}
+
 	span.hlLabelRef {
 		background-color : #fff7d5;
 		font-size : 8px;
